# j1R4-clone-rust

./: .env.example  .gitignore  Cargo.toml  FECHA_COMPONENT_GUIDE.md  FECHA_ENDPOINTS_DOCS.md  README.md  SHARED_PROJECTS_IMPLEMENTATION.md  SHUTTLE_DEPLOYMENT_GUIDE.md  cors-test.html  test_websockets.ps1  test_ws_simple.ps1
.github/: shuttle.yml
.github/scripts/: setup-branch-protection.md
.github/workflows/: ci.yml  shuttle.yml  testing.yml
src/: config.rs  db.rs  errors.rs  lib.rs  main.rs  state.rs
src/handlers/: auth_handler.rs  comment_handler.rs  date_range_handler.rs  image_handler.rs  project_handler.rs  task_handler.rs  websocket_handler.rs
src/helpers/: create_project_for_user.rs  create_task_for_project.rs  helper_setup_app.rs
src/middleware/: auth_middleware.rs
src/models/: comment_model.rs  image_model.rs  project_models.rs  task_model.rs  user_model.rs
src/postma-collection/: ENDPOINTS_FECHAS.md
src/router/: router.rs
src/services/: auth_service.rs  comment_service.rs  date_range_service.rs  image_service.rs  permission_service.rs  project_service.rs  storage_service.rs  task_service.rs
src/test/: comment_edit_test.rs  comment_integration_test.rs  project_edit_test.rs  project_integration_test.rs  project_membership_test.rs  project_shared_access_test.rs  simple_image_test.rs  task_creation_test.rs  task_edit_test.rs  task_read_test.rs
src/utils/: jwt_utils.rs  password_utils.rs  validation.rs
