[package]
name = "jira_clone_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version = "0.8.4", feature = ["macros"]}
tokio = {version = "1" , features = ["full"]}
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1"
mongodb = "3.2.3"

anyhow = "1.0"
thiserror = "2.0.12" 
tracing = "0.1.41"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}

dotenvy = "0.15"

jsonwebtoken = "9"
argon2 = {version = "0.5.0", features = ["std", "password-hash"]}

validator = {version = "0.20.0", features = ["derive"]}

bson = {version = "2", features = ["chrono-0_4"]}
chrono = {version = "0.4.41", features = ["serde"]}